test/Fail/noLevelUnivToSet.err
noLevelUnivToSet.agda:7.5-9: error: [UnequalTypes]
The types
  LevelUniv
and
  Set
are not equal
when checking that the expression refl has type LevelUniv ≡ Set
